2004-11-16 Scott Dattalo <scott@dattalo.com>
	* src/value.h, src/value.cc, src/processor.h, src/processor.cc,
	src/pic-processor.cc, src/symbol.h, src/symbol.cc: Added 3 new
	attributes: SafeMode, WarnMode, and UnknownMode to control the
	simulator's behavior under certain simulation conditions. Attribute
	handling has also been enhanced.
	* cli/parse.yy, cli/cmd_help.cc, cli/cmd_help.h: Help command
	will display information about attributes.
	
2004-11-15 Scott Dattalo <scott@dattalo.com>
	* src/ioports.h, src/ioports.cc, src/16bit-registers.cc: Beginning
	to redesign I/O ports.

2004-11-14 Scott Dattalo <scott@dattalo.com>
	* src/i2c-ee.cc, src/ioports.cc, src/ioports.h, src/stimuli.cc,
	src/uart.cc: The usart has bitrotted. The relatively recent I/O pin
	changes broke this and probably other peripherals too.
	* modules/Makefile.am: added new files.
	* modules/pthread-wrap.h, modules/ttoken.cc, modules/ttoken.h:
	The token class provides co-routine support for modules.
	* modules/bitlog.cc, modules/bitlog.h, modules/bytelog.cc,
	modules/bytelog.h: Bit and Byte event loggers. bitlog was originally
	part of the uart module.
	* modules/usart.cc, modules/usart.h: removed the bit logger class and
	am now making an attempt to resurrect this code. 

2004-11-10 Scott Dattalo <scott@dattalo.com>
	* cmd/cmd_break.cc: updated the help description for 'break'
	* src/operator.cc, src/symbol.h, src/symbol.cc: Allow registers
	to be type-cast into integers.

2004-11-10 Scott Dattalo <scott@dattalo.com>
	* gui/gui_breadboard.cc:
	* src/breakpoints.cc, src/gpsim_object.cc, src/gpsim_object.h,
	src/modules.cc, src/processor.cc, src/registers.cc, src/registers.h,
	src/symbol.cc, src/symbol.h:
	- More attribute enhancements
	- added a module load capability that uses attributes.


2004-11-08 Scott Dattalo <scott@dattalo.com>
	* cli/cmd_attach.h, cli/cmd_load.cc, cli/cmd_symbol.cc, 
	cli/cmd_symbol.h, cli/command.cc, cli/parse.yy, cli/scan.ll
	cli/socket.cc: More attibute updates